update autors, username

--- a/_posts/2025-09-29-DNS.md
+++ b/_posts/2025-09-29-DNS.md
@@ -3,6 +3,7 @@ title: DNS
 date: 2025-09-30
 categories: [Networking, Concept]
 tags: [networking, services]
+author: <author_mpmk>
 ---
 
 # DNS What is thats?
