--- a/_posts/2025-09-29-test.md
+++ b/_posts/2025-09-29-test.md
@@ -2,7 +2,8 @@
 title: Test
 date: 2025-09-29
 categories: [Top, into]
-tags: [docker, network]     # TAG names should always be lowercase
+tags: [docker, network]
+author: <author_zoog>
 ---
 
 
